--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 
 <body>
-
     <center>
         <h1 style="font-style: initial;">Welcom to Home!! son..</h1>
     </center>
-    <hr size="20" align="center" width="90%" noshade="noshade"></hr>
-    <nav>
-        <p><a href="layout.html">???</a></p>
-    </nav>
-    <hr size="20" align="center" width="90%" noshade="noshade"></hr>
+    <hr size="20" align="center" width="90%" noshade="noshade">
+    </hr>
+    <p><a href="layout.html">???</a></p>
+
+    <hr size="20" align="center" width="90%" noshade="noshade">
+    </hr>
+   
     <section>
         <article>
             <p><a href="special.html">!!!</a></p>
         </article>
     </section>
 
-
-
 </body>
-<hr size="20" align="center" width="90%" noshade="noshade"></hr>
+<hr size="20" align="center" width="90%" noshade="noshade">
+</hr>
 <footer>
     <p> <a href="pretag.html">~~~</a></p>
 </footer>
