--- a/javascript/function.html
+++ b/javascript/function.html
@@ -20,13 +20,13 @@
         console.log(result);
 
         var fnc = function (a, b) { return a * b; }
-        console.log(fnc(3,5));
+        console.log(fnc(3,5,7)); //3번째 7은 무시해벌임 return이 2개만 받아서 하니까 
 
         var fnc2 = function(){
             document.writeln("hellllllllllllllllo")
         }
         fnc2();
-        
+
         document.write('<br>');
 
         (function (){
