--- a/javascript/string.html
+++ b/javascript/string.html
@@ -42,7 +42,7 @@
         for(var i=0; i<sp.length; i++){
             document.write(sp[i]);
         }
-        for(i of sp){ //확장for임 
+        for(i of sp){ //확장for임 위에거랑 같은거임
             console.log(i);
         }
     </script>
